test/conformance/chainsaw/generating-policies/validate/missing-match-constraints/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: zk-kafka-address
spec:
  matchConditions:
    - expression: "object.metadata.labels['color'] == 'red'"
      name: "red-label"
  variables:
    - name: nsName
      expression: "object.metadata.name"
    - name: configmap
      expression: >-
        [
          {
            "kind": dyn("ConfigMap"),
            "apiVersion": dyn("v1"),
            "metadata": dyn({
              "name": "zk-kafka-address",
              "namespace": string(variables.nsName)
            }),
            "data": dyn({
              "random-key": "random-value"
            })
          }
        ]
  generate:
    - expression: generator.apply(variables.nsName, variables.configmap)
